--- a/src/index.css
+++ b/src/index.css
@@ -297,16 +297,71 @@ hr {
     padding: 50px 20px;
 }
 
+.content-page-resenas-video iframe {
+    margin: 50px 0px;
+    width: 100%;
+    height: 400px;
+}
+
 .valoracion-item {
-    background-color: #222;
+    background-color: #090909;
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
 }
 
+.valoracion-item h6{
+    color: white;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.valoracion-item small{
+    font-size: 1.5rem;
+    color: #333;
+    margin-top: 5px;
+    margin-left: 20px;
+    display: inline-block;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.valoracion-item small:hover{
+    color: red;
+}
+
+.valoracion-item p:nth-child(2){
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-size: 1rem;
+    color: #999;
+}
+
+
+.valoracion-item p:nth-child(3){
+    color: #999;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid 1px #333;
+}
+
+.valoracion-item p strong{
+    font-size: 0.8rem;
+}
 
 .input-enviar-validacion{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.loading-home{
+    width: 100%;
+    text-align: center;
+    padding: 30vh;
 }
